--- a/water_level_prediction _lr.ipynb
+++ b/water_level_prediction _lr.ipynb
@@ -1468,7 +1468,7 @@
     "df_temperature.plot(linewidth=3, figsize=(12,6))\n",
     "plt.xticks(fontsize=14)\n",
     "plt.yticks(fontsize=14)\n",
-    "plt.legend(labels =['Average air temperature', '10-years SMA', '20-years SMA'], fontsize=14)\n",
+    "plt.legend(labels =['Average air temperature'], fontsize=14)\n",
     "plt.title('The yearly average air temperature in city', fontsize=20)\n",
     "plt.xlabel('Year', fontsize=16)\n",
     "plt.ylabel('Temperature [°C]', fontsize=16)\n"
@@ -1477,7 +1477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2239ab2",
+   "id": "0d346ee0",
    "metadata": {},
    "outputs": [],
    "source": []
